When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 


2nd May 2021
- USER - If requested number of slices exceeds what is possible, the recipe is updated automatically. Therefore
          default recipe can now have a very large number of slices requested and by extension BakingTray will
          by default image the full available depth. 
- USER - New Sample has a confirmation dialogue and resets settings in the prepare GUI. 
- USER - Various bugfixes, including for SI Basic. 

5th April 2021
- USER (Dev) - Runs on ScanImage Basic


26th March 2021
- USER (Dev) - Bugfix: Section start number is correctly displayed in Acq view immediately when resuming.


23rd March 2021
- USER (Dev) - Middle-click to move in preview GUI! Thanks to Florian Vollrath for this. 
- USER (Dev) - A little while ago we add Zaber devices. 
- USER (Dev) - New sample menu item that also turns on reso scanner


17th Feb 2021
- USER (dev): Software version number in recipe is now the Git branch and commit hash
- USER (dev): PMT auto-on is disabled each time the scanner is armed. i.e. each time a tile scan is done.
- USER (dev): Z-stage homes automatically when user goes to 0 mm from a position greater than 20 mm. 
             NOTE: the above can be disabled by a new setting. Information on this is presented when
             the software starts. You will need to add SYSTEM.homeZjackOnZeroMove=0 to systemSettings.yml
             to disable the behavior or SYSTEM.homeZjackOnZeroMove=1 to disable warning message but retain
             the new behavior.

10th Feb 2021
- USER (dev): support report can now be generated from the Tools menu.